--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,124 @@
 .hidden {
     display: none;
 }
+
+* {
+    border: none;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box; 
+}
+
+.hidden { display: none; }
+
+html, body { height: 100% }
+
+body { 
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  background-color: black;
+  color: white;
+}
+
+header {
+    background-color: rgb(119, 250, 178);
+    position: sticky;
+    top: 0;
+    text-align: center;
+}
+
+#main-logo { width: 300px; padding: 10px 0; }
+
+#character_nav {
+    text-align: center;
+    background-color: #474545;
+
+    background-image: url(../images/MB_Wallpaper.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    background-blend-mode: multiply;
+}
+
+.characters { list-style-type: none; }
+
+.characters li { 
+    position: relative;
+    display: inline-block;
+    height: 220px;
+    margin: 10px 8px;
+
+    background-color: rgb(136, 132, 132);
+
+    text-align: left;
+    cursor: pointer;
+}
+
+.characters li h5 {
+    position: relative;
+    color: white;
+    padding: 12px 8px;
+
+    z-index: 500;
+}
+
+.characters li a { text-decoration: none; }
+
+.red_bumper {
+    width: 100%;
+    height: 5px;
+    background-color: rgb(64, 33, 136);
+
+    transition: height 0.5s ease;
+
+    position: absolute;
+}
+
+.characters li:hover .red_bumper { height: 70px; }
+
+article { padding: 20px; }
+
+
+article h3  {
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 14px;
+}
+
+
+article p {
+    width: 80%;
+    font-size: 18px;
+    line-height: 1.2;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.sprite {
+    width: 150px;
+    height: 150px;
+    
+    background-image: url(../images/Mario_Characters_Sprite.jpg);
+}
+
+#Mario { background-position: -0px 0; }
+#Luigi { background-position: -150px 0; }
+#Peach { background-position: -300px 0; }
+#Toad { background-position: -450px 0; }
+#Bowser { background-position: -600px 0; }
+#Yoshi {background-position: -750px 0;}
+
+.sprite:hover { background-position-y: -150px !important; }
+
+footer {
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.sticky_footer {
+    position: sticky;
+    top: 100%;
+
+    height: 80px;
+    background-color: rgb(17, 49, 4);
+}
