--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html, body { height: 100% }
 body { 
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   background-color: rgb(14, 1, 1);
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 header {
@@ -26,7 +26,7 @@ header {
 
 #character_nav {
     text-align: center;
-    background-color: #474545;
+    background-color: #c7c0c0;
 
     background-image: url(../images/MB_Wallpaper.jpg);
     background-repeat: no-repeat;
@@ -40,7 +40,7 @@ header {
 .characters li { 
     position: relative;
     display: inline-block;
-    height: 220px;
+    height: 180px;
     margin: 10px 8px;
 
     background-color: rgb(136, 132, 132);
@@ -52,7 +52,7 @@ header {
 .characters li h5 {
     position: relative;
     color: white;
-    padding: 12px 8px;
+    padding: 12px 50px;
 
     z-index: 500;
 }
@@ -64,12 +64,12 @@ header {
     height: 6px;
     background-color: rgb(92, 8, 172);
 
-    transition: height 0.2s ease;
+    transition: height 0.5s ease;
 
     position: absolute;
 }
 
-.characters li:hover .red_bumper { height: 70px; }
+.characters li:hover .red_bumper { height: 40px; }
 
 article { padding: 20px; }
 
@@ -81,14 +81,14 @@ article h3  {
 
 article p {
     width: 80%;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.2;
     text-align: center;
     margin: 0 auto;
 }
 
 .sprite {
-    width: 150px;
+    width: 148px;
     height: 150px;
     
     background-image: url('../images/Characters_Sprite.jpg');
@@ -101,7 +101,7 @@ article p {
 #Bowser { background-position: -600px 0; }
 #Yoshi { background-position: -750px 0; }
 
-.sprite:hover { background-position-y: -150px !important; }
+.sprite:hover { background-position-y: -151px !important; }
 
 footer {
     color: white;
@@ -153,7 +153,7 @@ footer {
     font-weight: bolder;
 }
 
-.lightbox_close:hover { opacity: 0.5; color: red; }
+.lightbox_close:hover { opacity: 0.5; color: rgb(251, 255, 0); }
 
 .lightbox article {
     width: 55%;
