--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ header {
     height: 220px;
     margin: 10px 8px;
 
-    background-color: rgb(136, 132, 132);
+    background-color: rgba(24, 4, 2, 0.815);
 
     text-align: left;
     cursor: pointer;
@@ -98,18 +98,18 @@ article p {
 }
 
 .sprite {
-    width: 150px;
-    height: 150px;
+    width: 145px;
+    height: 145px;
     
-    background-image: url(../images/Mario_Characters_Sprite.jpg);
+    background-image: url('../images/Characters_Sprite.jpg');
 }
 
-#Mario { background-position: -0px 0; }
-#Luigi { background-position: -150px 0; }
+#Mario { background-position:  1px 0; }
+#Luigi { background-position: -149px 0; }
 #Peach { background-position: -300px 0; }
 #Toad { background-position: -450px 0; }
 #Bowser { background-position: -600px 0; }
-#Yoshi {background-position: -750px 0;}
+#Yoshi { background-position: -750px 0; }
 
 .sprite:hover { background-position-y: -150px !important; }
 
