--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ header {
     height: 180px;
     margin: 10px 8px;
 
-    background-color: rgb(136, 132, 132);
+    background-color: rgba(29, 2, 2, 0.781);
 
     text-align: left;
     cursor: pointer;
@@ -88,18 +88,18 @@ article p {
 }
 
 .sprite {
-    width: 148px;
-    height: 150px;
+    width: 145px;
+    height: 145px;
     
     background-image: url(../images/MarioBros_Sprite.jpg);
 }
 
-#Mario { background-position:  1px 0; }
-#Luigi { background-position: -149px 0; }
+#Mario { background-position:  0px 0; }
+#Luigi { background-position: -150px 0; }
 #Peach { background-position: -300px 0; }
-#Toad { background-position: -450px 0; }
-#Bowser { background-position: -600px 0; }
-#Yoshi { background-position: -750px 0; }
+#Toad { background-position: -451px 0; }
+#Bowser { background-position: -605px 0; }
+#Yoshi { background-position: -756px 0; }
 
 .sprite:hover { background-position-y: -151px !important; }
 
